fix config menu pos, genomealign rough element blocking cursor

--- a/eg-tracks/src/components/GenomeView/TrackComponents/GenomeAlignComponents/HorizontalFragment.css
+++ b/eg-tracks/src/components/GenomeView/TrackComponents/GenomeAlignComponents/HorizontalFragment.css
@@ -11,6 +11,7 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid;
+  pointer-events: none;
 }
 
 .arrow-down {
@@ -20,4 +21,5 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 5px solid;
+  pointer-events: none;
 }
